MDEV-5694 GREATEST(date, time) returns a wrong data type